--- a/Kompose/app/build.gradle
+++ b/Kompose/app/build.gradle
@@ -22,7 +22,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    // dependency for youtube extractor
+    compile 'com.github.evgenyneu:js-evaluator-for-android:v3.0.0'
+
+    // YouTube extractor
+    compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 }
