--- a/Kompose.old/app/build.gradle
+++ b/Kompose.old/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "ch.ethz.inf.vs.kompose"
+        applicationId "ch.ethz.inf.vs.kompose.kompose"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -22,12 +22,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile (
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'],
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.0'],
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0']
-    )
+
+    // dependency for youtube extractor
+    compile 'com.github.evgenyneu:js-evaluator-for-android:v3.0.0'
+
+    // YouTube extractor
+    compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 }
