Add some class, add some implementation

--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -18,10 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".model.AndroidServerService"
-            android:enabled="true"
-            android:exported="true"/>
-    </application>
 
+        <service
+            android:name=".model.AndroidServerService"
+            android:enabled="true"
+            android:exported="true" />
+
+    </application>
 
 </manifest>
