--- a/Kompose/app/build.gradle
+++ b/Kompose/app/build.gradle
@@ -25,9 +25,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile (
+    compile(
             [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.0'],
             [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0']
     )
+
+    compile 'com.github.evgenyneu:js-evaluator-for-android:v3.0.0'
+    compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 }
