--- a/Kompose/app/build.gradle
+++ b/Kompose/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
 
     compile 'com.github.evgenyneu:js-evaluator-for-android:v3.0.0'
     compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
+
+    compile 'joda-time:joda-time:2.9.9'
 }
