--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/KomposeTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +25,7 @@
         <activity android:name=".PlaylistActivity" />
         <activity android:name=".HistoryOverviewActivity" />
         <activity android:name=".HistoryDetailsActivity"/>
+        <activity android:name=".settings.SettingsActivity" />
 
         <service
             android:name=".service.AndroidServerService"
