--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <service android:name=".service.DownloadService" />
         <service android:name=".service.SongService" />
         <service android:name=".service.SessionService" />
+        <service android:name=".service.ClientService" />
 
     </application>
 
