--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -43,16 +43,16 @@
             android:name=".service.AndroidServerService"
             android:enabled="true"
             android:exported="true" />
-
         <service android:name=".service.YoutubeService" />
         <service android:name=".service.StorageService" />
-        <service android:name=".service.StateService" />
         <service android:name=".service.NetworkService" />
         <service android:name=".service.DownloadService" />
         <service android:name=".service.SongService" />
         <service android:name=".service.SessionService" />
         <service android:name=".service.ClientService" />
+        <service android:name=".service.SampleService" />
 
+        <activity android:name=".DesignActivity"></activity>
     </application>
 
 </manifest>
