--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
 
         <service android:name=".service.ClientNetworkService" />
 
-        <activity android:name=".DesignActivity"></activity>
+        <activity android:name=".DesignActivity"/>
     </application>
 
 </manifest>
