Use tinydnssd instead of buggy Android API

--- a/Kompose/app/build.gradle
+++ b/Kompose/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 
     compile 'joda-time:joda-time:2.9.9'
+
+    // fuck Googles buggy DNS-SD implementation
+    compile 'com.youview:tinydnssd:1.2.7'
 }
