Repurposed ClientNetworkService into NSDService, made it stop the listener properly

--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <service
             android:name=".service.AndroidServerService"
             android:stopWithTask="true" />
-        <service android:name=".service.ClientNetworkService" />
+        <service android:name=".service.ClientNSDService" />
 
         <activity android:name=".DesignActivity" />
         <activity
