Screw it, I'm done. Reverted to 5a0f1ca32f8c4c906fe7c0cde1aed1a5c213733b. Have fun.

--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -39,8 +39,7 @@
         <service
             android:name=".service.AndroidServerService"
             android:stopWithTask="true" />
-        <service android:name=".service.ClientNSDService" />
-        <service android:name=".service.HostNSDService"/>
+        <service android:name=".service.ClientNetworkService" />
 
         <activity android:name=".DesignActivity" />
         <activity
