--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/KomposeTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,19 +25,34 @@
         </activity>
         <activity
             android:name=".PartyCreationActivity"
-            android:label="Create your own Party" />
+            android:label="Create your own Party"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ConnectActivity"
-            android:label="Choose a Party" />
+            android:label="Choose a Party"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".PlaylistActivity"
+            android:label="@string/title_activity_playlist"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".HistoryOverviewActivity"
-            android:label="Overview of past Playlists" />
+            android:label="Overview of past Playlists"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".HistoryDetailsActivity"
-            android:label="Playlist History" />
+            android:label="Playlist History"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SettingsActivity"
-            android:label="Settings" />
+            android:label="Settings"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"/>
 
         <service
             android:name=".service.AndroidServerService"
@@ -42,9 +60,6 @@
         <service android:name=".service.ClientNetworkService" />
 
         <activity android:name=".DesignActivity" />
-        <activity
-            android:name=".PlaylistActivity"
-            android:label="@string/title_activity_playlist" />
     </application>
 
 </manifest>
