Add first implementation of AudioService

--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -74,6 +74,8 @@
 
         <service android:name=".service.ClientNetworkService" />
 
+        <service android:name=".service.AudioService" />
+
         <activity android:name=".DesignActivity" />
     </application>
 
