HostServerService is now properly stopped when exitting the PlaylistActivity. Also, I promise to make smaller commits from now on.

--- a/Kompose/app/src/main/AndroidManifest.xml
+++ b/Kompose/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
             android:screenOrientation="portrait" />
 
         <service
-            android:name=".service.HostServerService"
+            android:name=".service.host.HostServerService"
             android:stopWithTask="true" />
         <service android:name=".service.client.ClientNetworkService" />
         <service android:name=".service.AudioService" />
