Mostly refactoring, and added the LICENSE of YoutubeExtractor. Do not remove this.

--- a/Kompose/app/build.gradle
+++ b/Kompose/app/build.gradle
@@ -38,6 +38,6 @@ dependencies {
 
     compile 'joda-time:joda-time:2.9.9'
 
-    // fuck Googles buggy DNS-SD implementation
+    // screw Google's buggy DNS-SD implementation
     compile 'com.youview:tinydnssd:1.2.7'
 }
