Use TextInputLayout for inputs, adjust margins

--- a/Kompose/app/build.gradle
+++ b/Kompose/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
 
     // screw Google's buggy DNS-SD implementation
     compile 'com.youview:tinydnssd:1.2.7'
+
+    compile 'com.android.support:design:26.1.0'
 }
